--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "three.js IGES loader",
   "main": "src/IGESLoader.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test-verbose": "jest --verbose true --silent false"
   },
   "repository": {
     "type": "git",
@@ -26,5 +27,11 @@
   "homepage": "https://github.com/alex-marinov/three-iges-loader#readme",
   "dependencies": {
     "three": "^0.158.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0"
   }
 }
