--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,15 +17,15 @@ jobs:
           node-version: "20.x"
           registry-url: "https://registry.npmjs.org"
       - run: npm ci
-      #   - run: npm test
+      - run: npm test
       - name: Set git user
         run: |
+          npm version patch -m "Bump version to %s [skip ci]"
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
-      - run: npm version patch -m "Bump version to %s [skip ci]"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - run: git push origin HEAD
+          git add .
+          git commit -m "Bump version [skip ci]"
+          git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: npm publish
