--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Set git user
         run: |
           npm version patch -m "Bump version to %s [skip ci]"
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
+          git config --global user.name "Alex Marinov"
+          git config --global user.email "alex@konsept.design"
           git add .
           git commit -m "Bump version [skip ci]"
           git push
