--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,26 +8,27 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      # Setup .npmrc file to publish to npm
+      - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
           node-version: "20.x"
           registry-url: "https://registry.npmjs.org"
-      - run: npm ci
-      - run: npm test
-      - name: Set git user
+      - name: Run npm ci and npm test
+        run: |
+          npm ci
+          npm test
+      - name: Bump version and push to GitHub
         run: |
           npm version patch -m "Bump version to %s [skip ci]"
-          git config --global user.name "Alex Marinov"
-          git config --global user.email "alex@konsept.design"
+          date > generated.txt
+          git config user.name github-actions
+          git config user.email github-actions@github.com
           git add .
           git commit -m "Bump version [skip ci]"
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - run: npm publish
+      - name: Publish to npmjs
+        run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
