update to pnpm and add github workflows for npm publish

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "three.js IGES loader",
   "main": "src/IGESLoader.js",
   "scripts": {
+    "build": "tsup index.ts --format esm,cjs --dts",
+    "lint": "tsc",
+    "release": "pnpm run build && changeset publish",
     "test": "jest",
     "test-verbose": "jest --verbose true --silent false"
   },
@@ -31,6 +34,7 @@
   "devDependencies": {
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
+    "@changesets/cli": "^2.27.9",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0"
   }
